# GenerateDBT

./: .gitignore  EXAMPLES.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  python_api_examples.py
examples/generated_samples/complex_sample_project/: README.md  dbt_project.yml
examples/generated_samples/complex_sample_project/macros/: aggregation_utils.sql  aggregation_utils_10.sql  aggregation_utils_11.sql  aggregation_utils_12.sql  aggregation_utils_13.sql  aggregation_utils_14.sql  aggregation_utils_15.sql  aggregation_utils_16.sql  aggregation_utils_17.sql  aggregation_utils_18.sql  aggregation_utils_19.sql  aggregation_utils_2.sql  aggregation_utils_20.sql  aggregation_utils_21.sql  aggregation_utils_22.sql  aggregation_utils_23.sql  aggregation_utils_24.sql  aggregation_utils_25.sql  aggregation_utils_26.sql  aggregation_utils_27.sql  aggregation_utils_28.sql  aggregation_utils_29.sql  aggregation_utils_3.sql  aggregation_utils_30.sql  aggregation_utils_31.sql  aggregation_utils_32.sql  aggregation_utils_33.sql  aggregation_utils_34.sql  aggregation_utils_35.sql  aggregation_utils_36.sql  aggregation_utils_37.sql  aggregation_utils_38.sql  aggregation_utils_39.sql  aggregation_utils_4.sql  aggregation_utils_40.sql  aggregation_utils_5.sql  aggregation_utils_6.sql  aggregation_utils_7.sql  aggregation_utils_8.sql  (+161 more)
examples/generated_samples/default_sample_project/: README.md  dbt_project.yml
src/generate_dbt/: __init__.py  cli.py  config.py  generator.py  macro_generator.py  model_generator.py
(+452 files in other folders)
