[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-dbt"
version = "0.1.0"
description = "Generate dbt models and macros for testing purposes"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "GenerateDBT Contributors"}
]
dependencies = [
    "pyyaml>=5.1",
    "click>=8.0",
]

[project.scripts]
generate-dbt = "generate_dbt.cli:main"

[project.urls]
Homepage = "https://github.com/MartinHofpower/GenerateDBT"
